# NetProbe-RS

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  REVERSE_ENGINEERING_A_TO_Z.md  blueprint.txt  build.rs
.github/workflows/: ci.yml  release.yml
building-scripts/: README.md  install-termux.sh  install.bat  install.ps1  install.sh
docs/: defensive-performance.md  defensive-safety-guardrails.md  framework-identity.md  intel-source-capability-map.md  kis-scan.md  learning-paths.md  phantom-scan.md  platform-intent.md  sar-scan.md  scan-types-overview.md  service-detection-intelligence.md  service-knowledge-architecture.md  tbns.md
docs/scan-types/: README.md  ack.md  aggressive-suite.md  arp.md  banner.md  callback-ping.md  connect.md  custom-scanflags.md  decoy.md  fin.md  fragment.md  ftp-bounce.md  ghost-recon.md  hybrid.md  icmp-echo.md  icmp-netmask.md  icmp-timestamp.md  idf.md  interface-bind.md  ip-proto-ping.md  ip-protocol.md  kinetic-fingerprint.md  kis.md  maimon.md  mirror.md  null-resonance.md  null.md  os-fingerprint.md  phantom.md  ping-scan.md  sar.md  script-scan.md  sctp-cookie.md  sctp-init-ping.md  sctp-init.md  source-port-pin.md  sovereign-callback.md  spoof-source.md  syn.md  tbns.md  (+13 more)
lua/: default_rules.lua
migrations/: 001_persistence.sql
scripts/: example.lua
src/: cli.rs  config.rs  error.rs  fingerprint_db.rs  lib.rs  main.rs  models.rs  os_fingerprint_db.rs  scan_types.rs  scheduler.rs  service_db.rs  targeting.rs
src/ai/: advice.rs  explain.rs  mod.rs  risk.rs  rules.rs  teacher.rs
src/core/: mod.rs  orchestrator.rs  stop_signal.rs
src/engine_async/: mod.rs  port_scan.rs  scanner.rs
src/engine_gpu/: hybrid_syn_scaffold.wgsl  mod.rs
src/engine_intel/: device_profile.rs  mod.rs  strategy.rs
src/engine_packet/: afxdp_backend.rs  arp.rs  audit_fixture_generator.rs  blackrock.rs  datalink_backend.rs  intelligence_pipeline.rs  mod.rs  packet_crafter.rs  port_scan.rs  rate_limiter.rs  socket_backend.rs  syn_scanner.rs
src/engine_parallel/: mod.rs
src/engine_plugin/: mod.rs
src/engine_probe/: mod.rs
src/engine_report/: mod.rs
src/engines/: async_engine.rs  bio_response_governor.rs  fusion_engine.rs  intelligence_engine.rs  local_system_guard.rs  lua_engine.rs  mod.rs  parallel.rs  parallel_threads_engine.rs  phantom_preflight.rs  resource_governor.rs  scan_bundle.rs  stabilizer_engine.rs  thread_pool.rs
src/engines/packet_crafter/: arp_request_crafter.rs  icmp_echo_crafter.rs  mod.rs  tcp_ack_crafter.rs  tcp_syn_crafter.rs  tcp_syn_crafters.rs  udp_probe_crafter.rs
src/fetchers/: mod.rs
src/output/: cli.rs  csv.rs  html.rs  json.rs  mod.rs  txt.rs
src/platform/: capability_registry.rs  mod.rs  privilege.rs  self_integrity.rs  sql_persistence.rs
src/reporter/: actionable.rs  advisory_catalog.rs  findings.rs  guidance.rs  learning.rs  mod.rs  reasoning.rs  scoring.rs  service_intelligence.rs  tbns_profiles.rs
src/reporter/learning_guides/: device_safety.rs  framework.rs  mod.rs  services.rs  tbns.rs
src/tasks/: analysis.rs  dns_lookup.rs  mod.rs  port_scan.rs  reporting.rs
src/utils/: mod.rs
(+3 files in other folders)
