[package]
name = "netprobe-rs"
version = "1.3.0"
edition = "2021"
authors = ["voltsparx"]
description = "Nmap-inspired network recon scanner in Rust with explainable output."
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
dns-lookup = "2.0"
futures = "0.3"
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time", "net", "fs", "io-util", "sync"] }
