[package]
name = "nprobe-rs"
version = "1.3.0"
edition = "2021"
authors = ["voltsparx"]
description = "Nmap-inspired network recon scanner in Rust with explainable output."
license = "MIT"

[features]
default = []
afxdp = []

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
csv = "1.3"
ctrlc = "3.4"
dns-lookup = "2.0"
futures = "0.3"
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
pnet_packet = "0.35"
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time", "net", "fs", "io-util", "sync"] }

[target.'cfg(unix)'.dependencies]
pnet_datalink = "0.35"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
