[package]
name = "nprobe-rs"
version = "4.5.0"
edition = "2021"
default-run = "nprobe-rs"
authors = ["voltsparx"]
description = "Rust network scanner for authorized internal and lab use with explainable output."
license = "MIT"
readme = "README.md"
keywords = ["network", "scanner", "security", "cli", "defensive"]
categories = ["command-line-utilities", "network-programming"]

[package.metadata.nprobe-rs]
release_theme = "Rusty Nail"
release_edition = "2026"

[features]
default = []
afxdp = []

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
csv = "1.3"
ctrlc = "3.4"
dns-lookup = "2.0"
futures = "0.3"
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
pnet_packet = "0.35"
rayon = "1.10"
regex = "1.11"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
socket2 = "0.5"
sysinfo = "0.33"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time", "net", "fs", "io-util", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
pnet_datalink = "0.35"

[build-dependencies]
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
